# qaguru_python_adv_1

./: .env  .env.sample  .gitignore  README.md  docker-compose.yml  kill_python_processes.bat  main.py  psycopg_test.py  pyproject.toml  requirements.txt
app/: main.py
app/database/: engine.py  users.py
app/models/: PaginatedResponse.py  User.py
app/routers/: status.py  users.py
info/: AppStatus.py  User.py  conftest.py  main_.py  main__.py  test_api.py  test_smoke.py
models/: PaginatedResponse.py
tests/: conftest.py  test_api.py  test_smoke.py
tests/utils/: utils.py
