[tool.poetry]
name = "qaguru-python-adv-1"
version = "0.1.0"
description = "fastAPI microservice with tests"
authors = ["alexandrbogdanov <al1029ex@gmail.com>"]
readme = "README.md"
packages = [{ include = "qaguru_python_adv_1" }]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
fastapi = "^0.112.2"
pydantic = "^2.8.2"
fastapi-pagination = "^0.12.26"
email-validator = "^2.2.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
requests = "^2.32.3"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.21"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
